parser/src/tests/corpus/negatives/bad-numlit/expected
Error from "negatives/bad-numlit/input", line 1:
| 4ty-two
|  ^
|
+-> Syntax error: unexpected 't' in numeric literal

